@@ -28,6 +28,7 @@ Config =
       'Image Hover':                  [false, 'Show full image on mouseover']
       'Sauce':                        [true,  'Add sauce to images']
       'Reveal Spoilers':              [false, 'Replace spoiler thumbnails by the original thumbnail']
+      'Don\'t expand spoilers':       [true,  'Don\'t expand spoilers when using ImageExpand.']
       'Expand From Current':          [false, 'Expand images from current position to thread end.']
       'Prefetch':                     [false, 'Prefetch images.']
     Menu:
@@ -4413,6 +4414,8 @@ ImageExpand =
     return unless post.img
     a = post.img.parentNode
     $.on a, 'click', ImageExpand.cb.toggle
+    if Conf['Don\'t expand spoilers'] and !Conf['Reveal Spoilers']
+      return if $ '.fileThumb.imgspoiler'
     if ImageExpand.on and !post.el.hidden
       ImageExpand.expand post.img
   cb:
@@ -4430,9 +4433,8 @@ ImageExpand =
               break
           thumbs = thumbs[i...]
         for thumb in thumbs
-          unless Conf['Reveal Spoilers']
-            if $ '.fileThumb.imgspoiler', thumb.parentNode.parentNode
-              continue
+          if Conf['Don\'t expand spoilers'] and !Conf['Reveal Spoilers']
+            continue if $ '.fileThumb.imgspoiler', thumb.parentNode.parentNode
           ImageExpand.expand thumb
       else #contract
         for thumb in $$ 'img[data-md5][hidden]'
