@@ -1,6 +1,7 @@
 master
 - noface
   Updater should now check until own post is found.
+  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
 
 2.35.9
 - Mayhem
